parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BOOL
    BREAK
    CONTINUE
    ELSE
    NOT
    OR
    PRINT
    SCAN

Grammar

Rule 0     S' -> program
Rule 1     program -> function_list
Rule 2     function_list -> function_list function
Rule 3     function_list -> function
Rule 4     function_header -> FN ID LPAREN param_list_opt RPAREN
Rule 5     function -> function_header LBRACE stmt_list RBRACE
Rule 6     param_list_opt -> param_list
Rule 7     param_list_opt -> empty
Rule 8     param_list -> ID
Rule 9     param_list -> param_list COMMA ID
Rule 10    stmt_list -> stmt_list statement
Rule 11    stmt_list -> statement
Rule 12    stmt_list -> empty
Rule 13    statement -> ID ASSIGN NUMBER SEMICOLON
Rule 14    statement -> ID ASSIGN ID SEMICOLON
Rule 15    statement -> ID ASSIGN expression SEMICOLON
Rule 16    statement -> DECL ID SEMICOLON
Rule 17    statement -> IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
Rule 18    statement -> WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
Rule 19    statement -> FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
Rule 20    for_init_opt -> ID ASSIGN NUMBER
Rule 21    for_init_opt -> ID ASSIGN ID
Rule 22    for_init_opt -> ID ASSIGN expression
Rule 23    for_init_opt -> empty
Rule 24    condition_opt -> condition
Rule 25    condition_opt -> empty
Rule 26    for_update_opt -> ID ASSIGN NUMBER
Rule 27    for_update_opt -> ID ASSIGN ID
Rule 28    for_update_opt -> ID ASSIGN expression
Rule 29    for_update_opt -> empty
Rule 30    statement -> RETURN expression SEMICOLON
Rule 31    statement -> RETURN NUMBER SEMICOLON
Rule 32    statement -> RETURN ID SEMICOLON
Rule 33    statement -> ID LPAREN argument_list_opt RPAREN SEMICOLON
Rule 34    expression -> expression PLUS term
Rule 35    expression -> expression MINUS term
Rule 36    expression -> term
Rule 37    term -> term TIMES factor
Rule 38    term -> term DIVIDE factor
Rule 39    term -> term MOD factor
Rule 40    term -> factor
Rule 41    factor -> NUMBER
Rule 42    factor -> STRING
Rule 43    factor -> CHAR
Rule 44    factor -> ID
Rule 45    factor -> LPAREN expression RPAREN
Rule 46    condition -> expression LT expression
Rule 47    condition -> expression GT expression
Rule 48    condition -> expression LE expression
Rule 49    condition -> expression GE expression
Rule 50    condition -> expression EQ expression
Rule 51    condition -> expression NE expression
Rule 52    empty -> <empty>
Rule 53    factor -> ID LPAREN argument_list_opt RPAREN
Rule 54    argument_list_opt -> argument_list
Rule 55    argument_list_opt -> empty
Rule 56    argument_list -> argument
Rule 57    argument_list -> argument_list COMMA argument
Rule 58    argument -> expression

Terminals, with rules where they appear

AND                  : 
ASSIGN               : 13 14 15 20 21 22 26 27 28
BOOL                 : 
BREAK                : 
CHAR                 : 43
COMMA                : 9 57
CONTINUE             : 
DECL                 : 16
DIVIDE               : 38
ELSE                 : 
EQ                   : 50
FN                   : 4
FOR                  : 19
GE                   : 49
GT                   : 47
ID                   : 4 8 9 13 14 14 15 16 20 21 21 22 26 27 27 28 32 33 44 53
IF                   : 17
LBRACE               : 5 17 18 19
LE                   : 48
LPAREN               : 4 17 18 19 33 45 53
LT                   : 46
MINUS                : 35
MOD                  : 39
NE                   : 51
NOT                  : 
NUMBER               : 13 20 26 31 41
OR                   : 
PLUS                 : 34
PRINT                : 
RBRACE               : 5 17 18 19
RETURN               : 30 31 32
RPAREN               : 4 17 18 19 33 45 53
SCAN                 : 
SEMICOLON            : 13 14 15 16 19 19 30 31 32 33
STRING               : 42
TIMES                : 37
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

argument             : 56 57
argument_list        : 54 57
argument_list_opt    : 33 53
condition            : 17 18 24
condition_opt        : 19
empty                : 7 12 23 25 29 55
expression           : 15 22 28 30 34 35 45 46 46 47 47 48 48 49 49 50 50 51 51 58
factor               : 37 38 39 40
for_init_opt         : 19
for_update_opt       : 19
function             : 2 3
function_header      : 5
function_list        : 1 2
param_list           : 6 9
param_list_opt       : 4
program              : 0
statement            : 10 11
stmt_list            : 5 10 17 18 19
term                 : 34 35 36 37 38 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_list
    (2) function_list -> . function_list function
    (3) function_list -> . function
    (5) function -> . function_header LBRACE stmt_list RBRACE
    (4) function_header -> . FN ID LPAREN param_list_opt RPAREN

    FN              shift and go to state 5

    program                        shift and go to state 1
    function_list                  shift and go to state 2
    function                       shift and go to state 3
    function_header                shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> function_list .
    (2) function_list -> function_list . function
    (5) function -> . function_header LBRACE stmt_list RBRACE
    (4) function_header -> . FN ID LPAREN param_list_opt RPAREN

    $end            reduce using rule 1 (program -> function_list .)
    FN              shift and go to state 5

    function                       shift and go to state 6
    function_header                shift and go to state 4

state 3

    (3) function_list -> function .

    FN              reduce using rule 3 (function_list -> function .)
    $end            reduce using rule 3 (function_list -> function .)


state 4

    (5) function -> function_header . LBRACE stmt_list RBRACE

    LBRACE          shift and go to state 7


state 5

    (4) function_header -> FN . ID LPAREN param_list_opt RPAREN

    ID              shift and go to state 8


state 6

    (2) function_list -> function_list function .

    FN              reduce using rule 2 (function_list -> function_list function .)
    $end            reduce using rule 2 (function_list -> function_list function .)


state 7

    (5) function -> function_header LBRACE . stmt_list RBRACE
    (10) stmt_list -> . stmt_list statement
    (11) stmt_list -> . statement
    (12) stmt_list -> . empty
    (13) statement -> . ID ASSIGN NUMBER SEMICOLON
    (14) statement -> . ID ASSIGN ID SEMICOLON
    (15) statement -> . ID ASSIGN expression SEMICOLON
    (16) statement -> . DECL ID SEMICOLON
    (17) statement -> . IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (18) statement -> . WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (19) statement -> . FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (30) statement -> . RETURN expression SEMICOLON
    (31) statement -> . RETURN NUMBER SEMICOLON
    (32) statement -> . RETURN ID SEMICOLON
    (33) statement -> . ID LPAREN argument_list_opt RPAREN SEMICOLON
    (52) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for DECL resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    ID              shift and go to state 12
    DECL            shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    RETURN          shift and go to state 17
    RBRACE          reduce using rule 52 (empty -> .)

  ! ID              [ reduce using rule 52 (empty -> .) ]
  ! DECL            [ reduce using rule 52 (empty -> .) ]
  ! IF              [ reduce using rule 52 (empty -> .) ]
  ! WHILE           [ reduce using rule 52 (empty -> .) ]
  ! FOR             [ reduce using rule 52 (empty -> .) ]
  ! RETURN          [ reduce using rule 52 (empty -> .) ]

    stmt_list                      shift and go to state 9
    statement                      shift and go to state 10
    empty                          shift and go to state 11

state 8

    (4) function_header -> FN ID . LPAREN param_list_opt RPAREN

    LPAREN          shift and go to state 18


state 9

    (5) function -> function_header LBRACE stmt_list . RBRACE
    (10) stmt_list -> stmt_list . statement
    (13) statement -> . ID ASSIGN NUMBER SEMICOLON
    (14) statement -> . ID ASSIGN ID SEMICOLON
    (15) statement -> . ID ASSIGN expression SEMICOLON
    (16) statement -> . DECL ID SEMICOLON
    (17) statement -> . IF LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (18) statement -> . WHILE LPAREN condition RPAREN LBRACE stmt_list RBRACE
    (19) statement -> . FOR LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (30) statement -> . RETURN expression SEMICOLON
    (31) statement -> . RETURN NUMBER SEMICOLON
    (32) statement -> . RETURN ID SEMICOLON
    (33) statement -> . ID LPAREN argument_list_opt RPAREN SEMICOLON

    RBRACE          shift and go to state 19
    ID              shift and go to state 12
    DECL            shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    RETURN          shift and go to state 17

    statement                      shift and go to state 20

state 10

    (11) stmt_list -> statement .

    RBRACE          reduce using rule 11 (stmt_list -> statement .)
    ID              reduce using rule 11 (stmt_list -> statement .)
    DECL            reduce using rule 11 (stmt_list -> statement .)
    IF              reduce using rule 11 (stmt_list -> statement .)
    WHILE           reduce using rule 11 (stmt_list -> statement .)
    FOR             reduce using rule 11 (stmt_list -> statement .)
    RETURN          reduce using rule 11 (stmt_list -> statement .)


state 11

    (12) stmt_list -> empty .

    RBRACE          reduce using rule 12 (stmt_list -> empty .)
    ID              reduce using rule 12 (stmt_list -> empty .)
    DECL            reduce using rule 12 (stmt_list -> empty .)
    IF              reduce using rule 12 (stmt_list -> empty .)
    WHILE           reduce using rule 12 (stmt_list -> empty .)
    FOR             reduce using rule 12 (stmt_list -> empty .)
    RETURN          reduce using rule 12 (stmt_list -> empty .)


state 12

    (13) statement -> ID . ASSIGN NUMBER SEMICOLON
    (14) statement -> ID . ASSIGN ID SEMICOLON
    (15) statement -> ID . ASSIGN expression SEMICOLON
    (33) statement -> ID . LPAREN argument_list_opt RPAREN SEMICOLON

    ASSIGN          shift and go to state 21
    LPAREN          shift and go to state 22


state 13

    (16) statement -> DECL . ID SEMICOLON

    ID              shift and go to state 23


state 14

    (17) statement -> IF . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 24


state 15

    (18) statement -> WHILE . LPAREN condition RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 25


state 16

    (19) statement -> FOR . LPAREN for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE

    LPAREN          shift and go to state 26


state 17

    (30) statement -> RETURN . expression SEMICOLON
    (31) statement -> RETURN . NUMBER SEMICOLON
    (32) statement -> RETURN . ID SEMICOLON
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 28
    ID              shift and go to state 29
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    LPAREN          shift and go to state 34

    expression                     shift and go to state 27
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 18

    (4) function_header -> FN ID LPAREN . param_list_opt RPAREN
    (6) param_list_opt -> . param_list
    (7) param_list_opt -> . empty
    (8) param_list -> . ID
    (9) param_list -> . param_list COMMA ID
    (52) empty -> .

    ID              shift and go to state 35
    RPAREN          reduce using rule 52 (empty -> .)

    param_list_opt                 shift and go to state 36
    param_list                     shift and go to state 37
    empty                          shift and go to state 38

state 19

    (5) function -> function_header LBRACE stmt_list RBRACE .

    FN              reduce using rule 5 (function -> function_header LBRACE stmt_list RBRACE .)
    $end            reduce using rule 5 (function -> function_header LBRACE stmt_list RBRACE .)


state 20

    (10) stmt_list -> stmt_list statement .

    RBRACE          reduce using rule 10 (stmt_list -> stmt_list statement .)
    ID              reduce using rule 10 (stmt_list -> stmt_list statement .)
    DECL            reduce using rule 10 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 10 (stmt_list -> stmt_list statement .)
    WHILE           reduce using rule 10 (stmt_list -> stmt_list statement .)
    FOR             reduce using rule 10 (stmt_list -> stmt_list statement .)
    RETURN          reduce using rule 10 (stmt_list -> stmt_list statement .)


state 21

    (13) statement -> ID ASSIGN . NUMBER SEMICOLON
    (14) statement -> ID ASSIGN . ID SEMICOLON
    (15) statement -> ID ASSIGN . expression SEMICOLON
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 40
    ID              shift and go to state 39
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    LPAREN          shift and go to state 34

    expression                     shift and go to state 41
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 22

    (33) statement -> ID LPAREN . argument_list_opt RPAREN SEMICOLON
    (54) argument_list_opt -> . argument_list
    (55) argument_list_opt -> . empty
    (56) argument_list -> . argument
    (57) argument_list -> . argument_list COMMA argument
    (52) empty -> .
    (58) argument -> . expression
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    RPAREN          reduce using rule 52 (empty -> .)
    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    argument_list_opt              shift and go to state 43
    argument_list                  shift and go to state 44
    empty                          shift and go to state 45
    argument                       shift and go to state 46
    expression                     shift and go to state 47
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 23

    (16) statement -> DECL ID . SEMICOLON

    SEMICOLON       shift and go to state 49


state 24

    (17) statement -> IF LPAREN . condition RPAREN LBRACE stmt_list RBRACE
    (46) condition -> . expression LT expression
    (47) condition -> . expression GT expression
    (48) condition -> . expression LE expression
    (49) condition -> . expression GE expression
    (50) condition -> . expression EQ expression
    (51) condition -> . expression NE expression
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    condition                      shift and go to state 50
    expression                     shift and go to state 51
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 25

    (18) statement -> WHILE LPAREN . condition RPAREN LBRACE stmt_list RBRACE
    (46) condition -> . expression LT expression
    (47) condition -> . expression GT expression
    (48) condition -> . expression LE expression
    (49) condition -> . expression GE expression
    (50) condition -> . expression EQ expression
    (51) condition -> . expression NE expression
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    condition                      shift and go to state 52
    expression                     shift and go to state 51
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 26

    (19) statement -> FOR LPAREN . for_init_opt SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE
    (20) for_init_opt -> . ID ASSIGN NUMBER
    (21) for_init_opt -> . ID ASSIGN ID
    (22) for_init_opt -> . ID ASSIGN expression
    (23) for_init_opt -> . empty
    (52) empty -> .

    ID              shift and go to state 54
    SEMICOLON       reduce using rule 52 (empty -> .)

    for_init_opt                   shift and go to state 53
    empty                          shift and go to state 55

state 27

    (30) statement -> RETURN expression . SEMICOLON
    (34) expression -> expression . PLUS term
    (35) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 56
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58


state 28

    (31) statement -> RETURN NUMBER . SEMICOLON
    (41) factor -> NUMBER .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 59
    TIMES           reduce using rule 41 (factor -> NUMBER .)
    DIVIDE          reduce using rule 41 (factor -> NUMBER .)
    MOD             reduce using rule 41 (factor -> NUMBER .)
    PLUS            reduce using rule 41 (factor -> NUMBER .)
    MINUS           reduce using rule 41 (factor -> NUMBER .)

  ! SEMICOLON       [ reduce using rule 41 (factor -> NUMBER .) ]


state 29

    (32) statement -> RETURN ID . SEMICOLON
    (44) factor -> ID .
    (53) factor -> ID . LPAREN argument_list_opt RPAREN

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 60
    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    MOD             reduce using rule 44 (factor -> ID .)
    PLUS            reduce using rule 44 (factor -> ID .)
    MINUS           reduce using rule 44 (factor -> ID .)
    LPAREN          shift and go to state 61

  ! SEMICOLON       [ reduce using rule 44 (factor -> ID .) ]


state 30

    (36) expression -> term .
    (37) term -> term . TIMES factor
    (38) term -> term . DIVIDE factor
    (39) term -> term . MOD factor

    SEMICOLON       reduce using rule 36 (expression -> term .)
    PLUS            reduce using rule 36 (expression -> term .)
    MINUS           reduce using rule 36 (expression -> term .)
    COMMA           reduce using rule 36 (expression -> term .)
    RPAREN          reduce using rule 36 (expression -> term .)
    LT              reduce using rule 36 (expression -> term .)
    GT              reduce using rule 36 (expression -> term .)
    LE              reduce using rule 36 (expression -> term .)
    GE              reduce using rule 36 (expression -> term .)
    EQ              reduce using rule 36 (expression -> term .)
    NE              reduce using rule 36 (expression -> term .)
    TIMES           shift and go to state 62
    DIVIDE          shift and go to state 63
    MOD             shift and go to state 64


state 31

    (40) term -> factor .

    TIMES           reduce using rule 40 (term -> factor .)
    DIVIDE          reduce using rule 40 (term -> factor .)
    MOD             reduce using rule 40 (term -> factor .)
    SEMICOLON       reduce using rule 40 (term -> factor .)
    PLUS            reduce using rule 40 (term -> factor .)
    MINUS           reduce using rule 40 (term -> factor .)
    COMMA           reduce using rule 40 (term -> factor .)
    RPAREN          reduce using rule 40 (term -> factor .)
    LT              reduce using rule 40 (term -> factor .)
    GT              reduce using rule 40 (term -> factor .)
    LE              reduce using rule 40 (term -> factor .)
    GE              reduce using rule 40 (term -> factor .)
    EQ              reduce using rule 40 (term -> factor .)
    NE              reduce using rule 40 (term -> factor .)


state 32

    (42) factor -> STRING .

    TIMES           reduce using rule 42 (factor -> STRING .)
    DIVIDE          reduce using rule 42 (factor -> STRING .)
    MOD             reduce using rule 42 (factor -> STRING .)
    SEMICOLON       reduce using rule 42 (factor -> STRING .)
    PLUS            reduce using rule 42 (factor -> STRING .)
    MINUS           reduce using rule 42 (factor -> STRING .)
    COMMA           reduce using rule 42 (factor -> STRING .)
    RPAREN          reduce using rule 42 (factor -> STRING .)
    LT              reduce using rule 42 (factor -> STRING .)
    GT              reduce using rule 42 (factor -> STRING .)
    LE              reduce using rule 42 (factor -> STRING .)
    GE              reduce using rule 42 (factor -> STRING .)
    EQ              reduce using rule 42 (factor -> STRING .)
    NE              reduce using rule 42 (factor -> STRING .)


state 33

    (43) factor -> CHAR .

    TIMES           reduce using rule 43 (factor -> CHAR .)
    DIVIDE          reduce using rule 43 (factor -> CHAR .)
    MOD             reduce using rule 43 (factor -> CHAR .)
    SEMICOLON       reduce using rule 43 (factor -> CHAR .)
    PLUS            reduce using rule 43 (factor -> CHAR .)
    MINUS           reduce using rule 43 (factor -> CHAR .)
    COMMA           reduce using rule 43 (factor -> CHAR .)
    RPAREN          reduce using rule 43 (factor -> CHAR .)
    LT              reduce using rule 43 (factor -> CHAR .)
    GT              reduce using rule 43 (factor -> CHAR .)
    LE              reduce using rule 43 (factor -> CHAR .)
    GE              reduce using rule 43 (factor -> CHAR .)
    EQ              reduce using rule 43 (factor -> CHAR .)
    NE              reduce using rule 43 (factor -> CHAR .)


state 34

    (45) factor -> LPAREN . expression RPAREN
    (34) expression -> . expression PLUS term
    (35) expression -> . expression MINUS term
    (36) expression -> . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    expression                     shift and go to state 65
    term                           shift and go to state 30
    factor                         shift and go to state 31

state 35

    (8) param_list -> ID .

    COMMA           reduce using rule 8 (param_list -> ID .)
    RPAREN          reduce using rule 8 (param_list -> ID .)


state 36

    (4) function_header -> FN ID LPAREN param_list_opt . RPAREN

    RPAREN          shift and go to state 66


state 37

    (6) param_list_opt -> param_list .
    (9) param_list -> param_list . COMMA ID

    RPAREN          reduce using rule 6 (param_list_opt -> param_list .)
    COMMA           shift and go to state 67


state 38

    (7) param_list_opt -> empty .

    RPAREN          reduce using rule 7 (param_list_opt -> empty .)


state 39

    (14) statement -> ID ASSIGN ID . SEMICOLON
    (44) factor -> ID .
    (53) factor -> ID . LPAREN argument_list_opt RPAREN

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 68
    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    MOD             reduce using rule 44 (factor -> ID .)
    PLUS            reduce using rule 44 (factor -> ID .)
    MINUS           reduce using rule 44 (factor -> ID .)
    LPAREN          shift and go to state 61

  ! SEMICOLON       [ reduce using rule 44 (factor -> ID .) ]


state 40

    (13) statement -> ID ASSIGN NUMBER . SEMICOLON
    (41) factor -> NUMBER .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 69
    TIMES           reduce using rule 41 (factor -> NUMBER .)
    DIVIDE          reduce using rule 41 (factor -> NUMBER .)
    MOD             reduce using rule 41 (factor -> NUMBER .)
    PLUS            reduce using rule 41 (factor -> NUMBER .)
    MINUS           reduce using rule 41 (factor -> NUMBER .)

  ! SEMICOLON       [ reduce using rule 41 (factor -> NUMBER .) ]


state 41

    (15) statement -> ID ASSIGN expression . SEMICOLON
    (34) expression -> expression . PLUS term
    (35) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 70
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58


state 42

    (44) factor -> ID .
    (53) factor -> ID . LPAREN argument_list_opt RPAREN

    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    MOD             reduce using rule 44 (factor -> ID .)
    PLUS            reduce using rule 44 (factor -> ID .)
    MINUS           reduce using rule 44 (factor -> ID .)
    COMMA           reduce using rule 44 (factor -> ID .)
    RPAREN          reduce using rule 44 (factor -> ID .)
    LT              reduce using rule 44 (factor -> ID .)
    GT              reduce using rule 44 (factor -> ID .)
    LE              reduce using rule 44 (factor -> ID .)
    GE              reduce using rule 44 (factor -> ID .)
    EQ              reduce using rule 44 (factor -> ID .)
    NE              reduce using rule 44 (factor -> ID .)
    SEMICOLON       reduce using rule 44 (factor -> ID .)
    LPAREN          shift and go to state 61


state 43

    (33) statement -> ID LPAREN argument_list_opt . RPAREN SEMICOLON

    RPAREN          shift and go to state 71


state 44

    (54) argument_list_opt -> argument_list .
    (57) argument_list -> argument_list . COMMA argument

    RPAREN          reduce using rule 54 (argument_list_opt -> argument_list .)
    COMMA           shift and go to state 72


state 45

    (55) argument_list_opt -> empty .

    RPAREN          reduce using rule 55 (argument_list_opt -> empty .)


state 46

    (56) argument_list -> argument .

    COMMA           reduce using rule 56 (argument_list -> argument .)
    RPAREN          reduce using rule 56 (argument_list -> argument .)


state 47

    (58) argument -> expression .
    (34) expression -> expression . PLUS term
    (35) expression -> expression . MINUS term

    COMMA           reduce using rule 58 (argument -> expression .)
    RPAREN          reduce using rule 58 (argument -> expression .)
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58


state 48

    (41) factor -> NUMBER .

    TIMES           reduce using rule 41 (factor -> NUMBER .)
    DIVIDE          reduce using rule 41 (factor -> NUMBER .)
    MOD             reduce using rule 41 (factor -> NUMBER .)
    PLUS            reduce using rule 41 (factor -> NUMBER .)
    MINUS           reduce using rule 41 (factor -> NUMBER .)
    COMMA           reduce using rule 41 (factor -> NUMBER .)
    RPAREN          reduce using rule 41 (factor -> NUMBER .)
    LT              reduce using rule 41 (factor -> NUMBER .)
    GT              reduce using rule 41 (factor -> NUMBER .)
    LE              reduce using rule 41 (factor -> NUMBER .)
    GE              reduce using rule 41 (factor -> NUMBER .)
    EQ              reduce using rule 41 (factor -> NUMBER .)
    NE              reduce using rule 41 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 41 (factor -> NUMBER .)


state 49

    (16) statement -> DECL ID SEMICOLON .

    RBRACE          reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    ID              reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    DECL            reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    IF              reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    WHILE           reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    FOR             reduce using rule 16 (statement -> DECL ID SEMICOLON .)
    RETURN          reduce using rule 16 (statement -> DECL ID SEMICOLON .)


state 50

    (17) statement -> IF LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 73


state 51

    (46) condition -> expression . LT expression
    (47) condition -> expression . GT expression
    (48) condition -> expression . LE expression
    (49) condition -> expression . GE expression
    (50) condition -> expression . EQ expression
    (51) condition -> expression . NE expression
    (34) expression -> expression . PLUS term
    (35) expression -> expression . MINUS term

    LT              shift and go to state 74
    GT              shift and go to state 75
    LE              shift and go to state 76
    GE              shift and go to state 77
    EQ              shift and go to state 78
    NE              shift and go to state 79
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58


state 52

    (18) statement -> WHILE LPAREN condition . RPAREN LBRACE stmt_list RBRACE

    RPAREN          shift and go to state 80


state 53

    (19) statement -> FOR LPAREN for_init_opt . SEMICOLON condition_opt SEMICOLON for_update_opt RPAREN LBRACE stmt_list RBRACE

    SEMICOLON       shift and go to state 81


state 54

    (20) for_init_opt -> ID . ASSIGN NUMBER
    (21) for_init_opt -> ID . ASSIGN ID
    (22) for_init_opt -> ID . ASSIGN expression

    ASSIGN          shift and go to state 82


state 55

    (23) for_init_opt -> empty .

    SEMICOLON       reduce using rule 23 (for_init_opt -> empty .)


state 56

    (30) statement -> RETURN expression SEMICOLON .

    RBRACE          reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    ID              reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    DECL            reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    IF              reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    WHILE           reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    FOR             reduce using rule 30 (statement -> RETURN expression SEMICOLON .)
    RETURN          reduce using rule 30 (statement -> RETURN expression SEMICOLON .)


state 57

    (34) expression -> expression PLUS . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    term                           shift and go to state 83
    factor                         shift and go to state 31

state 58

    (35) expression -> expression MINUS . term
    (37) term -> . term TIMES factor
    (38) term -> . term DIVIDE factor
    (39) term -> . term MOD factor
    (40) term -> . factor
    (41) factor -> . NUMBER
    (42) factor -> . STRING
    (43) factor -> . CHAR
    (44) factor -> . ID
    (45) factor -> . LPAREN expression RPAREN
    (53) factor -> . ID LPAREN argument_list_opt RPAREN

    NUMBER          shift and go to state 48
    STRING          shift and go to state 32
    CHAR            shift and go to state 33
    ID              shift and go to state 42
    LPAREN          shift and go to state 34

    term                           shift and go to state 84
    factor                         shift and go to state 31

state 59

    (31) statement -> RETURN NUMBER SEMICOLON .

    RBRACE          reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    ID              reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    DECL            reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    IF              reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    WHILE           reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    FOR             reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)
    RETURN          reduce using rule 31 (statement -> RETURN NUMBER SEMICOLON .)


state 60
